labs/ingress-lab-02/manifests/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routing-demo
  namespace: ingress-routing-lab
spec:
  rules:
    - host: wrong-routing.local
      http:
        paths:
          - path: /wrong
            pathType: Prefix
            backend:
              service:
                name: routing-demo-service
                port:
                  number: 80
